# SIR_utils

./: .gitignore  README.md  Untitled.ipynb  abagen.ipynb  genes_to_pcas.m  interpolateFiberLengths.m  main.py  null_ROI_dist.asv  null_ROI_dist.m  null_ROI_dist2.m  null_ROI_distance.ipynb  null_brainsmash.ipynb  pcas_to_genes.asv  pcas_to_genes.m  plot_3d_map_to_surface_projection.ipynb  pyproject.toml  reorder_yqz_mat.m  runSIRsim.m  sim_prot_from_gene.asv  sim_prot_from_gene.m  vis_nii.ipynb  visualise_gene_scores.ipynb
.ipynb_checkpoints/: abagen-checkpoint.ipynb  abagen_indiv-checkpoint.ipynb  null_brainsmash-checkpoint.ipynb  tmp-checkpoint.csv  visualise_gene_scores-checkpoint.ipynb
abagen_get/: abagen.ipynb  abagen_indiv.ipynb
abagen_get/data/: GO_clearance.csv  README.txt  (+6 more)
data/: DK_ROI_LAMP5_expr_z.csv  GO_E3_ligase_uniq.csv  GO_IDA_Homo-sapiens_prot_uniq.csv  brain_expressed_genes.tsv  brain_expressed_genes_16088.csv  gba.csv  gene_corrs_parvalb_clear.csv  s100_roi_gmv.csv  snca.csv  ubq.csv
emp_atrophy_lme/: Patient.m  betas.csv  betas_diag.csv  betas_roi.csv  betas_roi_diag.csv  betas_to_mat.m  correlations.csv  get_beta.ipynb  indiv_parc.ipynb  main.asv  main.m  mgv.csv  patient_gmv_demographics.mat  test.ipynb
enrichment/: 41586_2022_4434_Tab1_ESM.csv  eqtl_genes.csv  gsea.ipynb  pgcSCZ3_eQTLbrain_genes.txt
gen_null/: null_brainsmash.ipynb  null_interpolate_sconnLen.m
results/: all_annotated_AHBA_GO_genes.csv  roi_gmv_bgs_s332  roi_gmv_stages_DK_full.csv  sconnLen_sim.mat  ts132_roi_gmv.csv
vis_nii/: filtered_df_seed_counts.csv  vis_nii.ipynb
(+614 files in other folders)
